k8s/iris-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iris-api
  namespace: mlflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: iris-api

  template:
    metadata:
      labels:
        app: iris-api

    spec:
      containers:
      - name: iris-api

        image: harbor.local:32318/ml/iris-api:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
