k8s/iris-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iris-api
  namespace: mlflow

spec:
  selector:
    app: iris-api

  ports:
  - port: 8000
    targetPort: 8000

  type: ClusterIP
