k8s/iris-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-api-ingress
  namespace: mlflow

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
  - host: iris-api.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: iris-api
            port:
              number: 8000
